# minikernel

./: Makefile  README.md  conanbuildenv-release-x86_64.sh  conanfile.py  conanfile.txt  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanbuildenv-release-x86_64.sh  deactivate_conanrun.sh  meson.build  meson_options.txt
.cache/clangd/index/: boot.S.A9F908BB20617400.idx  buddy.c.8FD65DB6D612A426.idx  interrupt.S.BD866C385E0820CE.idx  list.h.F95D2C5B23AE2AAF.idx  main.c.EF7519536BA104EE.idx  mm.h.F08E589ECB9E0366.idx  sched.h.23AB60D18F4A45B4.idx  shell.c.BC3C1F380E81BFEA.idx  shell.h.7DCEF76B06D1DDDC.idx  spinlock.h.09F5429B4D0C17CF.idx  switch.S.FACA454BB693CFE7.idx  types.h.B123380DED8EBE26.idx
.github/workflows/: build-test.yml
arch/x86_64/boot/: boot.S  kernel.ld
arch/x86_64/cpu/: switch.S
cross/: x86_64-none.ini
docs/: BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/api/: syscalls.md
docs/architecture/: 00-overview.md  01-boot-process.md
docs/subsystems/: interrupts.md  memory-management.md  scheduler.md
include/: list.h  mm.h  sched.h  spinlock.h  types.h
iso/boot/: kernel.elf
kernel/include/: list.h  mm.h  sched.h  shell.h  spinlock.h  types.h
kernel/interrupt/: interrupt.S
kernel/mm/: buddy.c
scripts/: build.sh
src/kernel/: main.c  shell.c
